--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t andyluchina/docker-react -f Dockfile.dev .
+  - docker build -f Dockfile.dev -t andyluchina/docker-react .
 
 script:
   - docker run andyluchina/docker-react npm run test -- --coverage
