--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t andyluchina/docker-react .
+  - docker build -f Dockerfile.dev -t andyluchina/docker-react .
 
 script:
   - docker run -e CI=true andyluchina/docker-react npm run test
