--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,5 +1,5 @@
 
-FROM node:alpine as builder
+FROM node:alpine
 
 WORKDIR '/app'
 
@@ -7,8 +7,5 @@ COPY package.json .
 RUN npm install
 
 COPY . .
-RUN npm run build
 
-
-FROM nginx
-COPY --from=builder /app/build /usr/share/nginx/html
+CMD ["npm", "run", "start"]
