--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -f Dockerfile.dev -t andyluchina/docker-react .
 
 script:
-  - docker run -e CI=true andyluchina/docker-react npm run test
+  - docker run -e CI=true andyluchina/docker-react npm run test --coverage
